fix fkb-d-fkb-panel z-index

--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -198,6 +198,7 @@
     position: fixed;
     bottom: 1em;
     right: 1em;
+    z-index: 3;
     body.fkb-panel-hidden & {
       transform: rotate(180deg);
     }
